# Trabalho_ED_Rotas

./: main.c  meson.build
backend/blindagem/: blindagem.c  blindagem.h  meson.build
backend/clients/: cliente.c  cliente.h  meson.build
backend/cria_libera/: cria_libera.c  cria_libera.h  meson.build
backend/entrega/: entrega.c  entrega.h  meson.build
backend/estrutura/: estrutura.h
backend/exibir/: exibir.c  exibir.h  meson.build
backend/menu/: menu.c  menu.h  meson.build
backend/pedidos/: meson.build  pedidos.c  pedidos.h
backend/routes/: meson.build  routes.c  routes.h
clients/: cliente.c  cliente.h  meson.build
routes/: meson.build  routes.c  routes.h
